This is the third line added.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <body>"This is the first part of the html file."</body>
 <body>"This is the second line committed."
 </body>
+<body>"This is the third line committed."</body>
