Some text added to fourth branch

--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@
 <body>"This is the second line committed."
 </body>
 <body>"This is the third line committed."</body>
+<body>"This is a line only for the fourthbranch.</body>
