--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@
 <body>"This is the second line committed."
 </body>
 <body>"This is the third line committed."</body>
+<body>"This is a line that will conflict with the other branch."</body>
