Change made at 140pm tuesday

--- a/index.html
+++ b/index.html
@@ -3,3 +3,4 @@
 </body>
 <body>"This is the third line committed."</body>
 <body>"This is a line that will conflict with the other branch."</body>
+<body>"Here's another line of text."</body>
